--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<h1>Metropolita</h1>
 					<p>Acompañanos en este video por los rincones <br />
 					de <a href="https://templated.co/">metrópolis</a> que seguro que no conocias <a href="https://templated.co/license"></a>.</p>
-					<a href="#one" class="button special scrolly">Get Started</a>
+					<a href="#one" class="button special scrolly">Sí,quiero</a>
 				</div>
 			</section>
 
