rase bajo el h1 por JONAS

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 			<section id="banner" data-video="images/banner">
 				<div class="inner">
 					<h1>Metropolita</h1>
-					<p>Acompañanos en este video por los rincones <br />
-					de <a href="https://templated.co/">metrópolis</a> que seguro que no conocias <a href="https://templated.co/license"></a>.</p>
+					<p>Acompañanos <br />
+					en este video por los rincones de <a href="https://templated.co/">metrópolis</a> que seguro que no conocias <a href="https://templated.co/license"></a>.</p>
 					<a href="#one" class="button special scrolly">Sí,quiero</a>
 				</div>
 			</section>
