--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 			<section id="banner" data-video="images/banner">
 				<div class="inner">
 					<h1>Metropolita</h1>
-					<p>Acompañanos <br />
-					en este video por los rincones de <a href="https://templated.co/">metrópolis</a> que seguro que no conocias <a href="https://templated.co/license"></a>.</p>
+					Acompañanos
+					<p> en este video por los rincones de <br />
+					 <a href="https://templated.co/">metrópolis</a> que seguro que no conocias <a href="https://templated.co/license"></a>.</p>
 					<a href="#one" class="button special scrolly">Sí,quiero</a>
 				</div>
 			</section>
